Add Postgresql as DB

--- a/cap-app/.cdsrc.json
+++ b/cap-app/.cdsrc.json
@@ -1,4 +1,17 @@
 {
+  "requires": {
+    "db": {
+      "kind": "postgres",
+      "impl": "@cap-js/postgres",
+      "credentials": {
+        "host": "localhost",
+        "port": 5432,
+        "user": "postgres",
+        "password": "postgres",
+        "database": "Student"
+      }
+    }
+  },
   "[development]": {
     "auth": {
       "passport": {
