--- a/cap-app/package.json
+++ b/cap-app/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^7",
-    "express": "^4"
+    "express": "^4",
+    "@cap-js/postgres": "^1"
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1"
