--- a/cap-app/.cdsrc.json
+++ b/cap-app/.cdsrc.json
@@ -4,7 +4,7 @@
       "kind": "postgres",
       "impl": "@cap-js/postgres",
       "credentials": {
-        "host": "syed-hadr-db.cuk4pu8myzcz.us-east-1.rds.amazonaws.com",
+        "host": "",
         "port": 5432,
         "user": "postgres",
         "password": "ngNFUQijohq2opXRZ71a",
