--- a/cap-app/.cdsrc.json
+++ b/cap-app/.cdsrc.json
@@ -7,7 +7,7 @@
         "host": "",
         "port": 5432,
         "user": "postgres",
-        "password": "ngNFUQijohq2opXRZ71a",
+        "password": "",
         "database": "Student"
       }
     }
